[Win] WebView didReceiveIcon delegate call doesn't have the icon in it https://bugs.webkit.org/show_bug.cgi?id=100379

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-07-23
Reviewed by Brent Fulgham.

Added missing icon to WebView didReceiveIcon delegate call, fixes <rdar://problem/5491010>.

* WebView.cpp:
(WebView::dispatchDidReceiveIconFromWebFrame):

Canonical link: https://commits.webkit.org/136855@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153059 268f45cc-cd09-0410-ab3c-d52691b4dbfc